<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.finnchristian.tracker.ui.TrackDetailsInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_title_edit_imageview"
                android:src="@drawable/ic_pencil"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="My track"
                android:id="@+id/detail_title_text_view"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_calendar"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/detail_created_label"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/detail_created_text_view"
                android:text="-"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_upload"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/detail_runkeeper_label"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/detail_uploaded_to_runkeeper_text_view"
                android:text="-"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_map_marker"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/detail_points_label"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="-"
                android:id="@+id/detail_points_text_view"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_walk"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/detail_distance_label"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="-"
                android:id="@+id/detail_distance_text_view"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:src="@drawable/ic_clock"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/detail_duration_label"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="-"
                android:id="@+id/detail_duration_text_view"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_arrow_up"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/detail_highest_altitude_label"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="-"
                android:id="@+id/detail_max_altitude_text_view"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_arrow_down"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/detail_lowers_altitude_label"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="-"
                android:id="@+id/detail_min_altitude_text_view"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="0dp">

            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/post_fitness_activity_to_runkeeper_button"
                    android:text="@string/detail_post_fitness_activity_to_runkeeper_button"
                    android:textAllCaps="true"
                    style="?android:attr/borderlessButtonStyle"
                    android:drawableLeft="@drawable/ic_upload"
                    android:drawableStart="@drawable/ic_upload"
                    android:gravity="start|center_vertical"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/toggle_tracking_button"
                    android:text="@string/detail_start_tracking_button"
                    android:textAllCaps="true"
                    style="?android:attr/borderlessButtonStyle"
                    android:gravity="end|center_vertical"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
